# src

./: .gitignore  CLAUDE.md  Makefile  README.md  _config.yml  glossary.md  index.md  style.md
bonsai/: README.md  bonsai-eg.py  bonsai.py  pyproject.toml
branch/: README.md  REPORT.md  branch-eg.py  branch-eg.py.md  branch.py  branch.py.md  index.md  pyproject.toml
etc/: bashrc  doc.awk  doc.py  init.lua  join.py  lua.ssh  nav.py  pyccot.py  split.py  style.md  tmux.rc  toc.py  tut.md
ezr-lisp/: INSTALL.md  README.md  REPORT.md  STYLE.md  dtlz.lisp  index.md  report.lisp  tiny-xai.asd  tiny-xai.lisp  xai-eg.lisp  xai-eg.out  xai.asd  xai.lisp  xaiplus-eg.lisp  xaiplus-eg.out  xaiplus.lisp
ezr-lua/: INSTALL.md  README.md  index.md  todo.md  xaiplus.lua
ezr-py/: INSTALL.md  README.md  REPORT.md  dtlz.py  index.md  pyproject.toml  report.py  xai-eg.py  xai.py  xaiplus-eg.py  xaiplus.py
ezr-py/docs/: dtlz.html  xai-eg.html
ezr2/: INSTALL.md  README.md  REPORT.md  acquire-eg.py  acquire.py  bins-eg.py  bins.py  cols-eg.py  cols.py  cuts-eg.py  cuts.py  data-eg.py  data.py  dist-eg.py  dist.py  dtlz.py  ezr2-eg.py  ezr2.py  lib-eg.py  lib.py  main-eg.py  main.py  pyproject.toml  rand-eg.py  rand.py  report.py  show-eg.py  show.py  stats-eg.py  stats.py  tbl-eg.py  tbl.py  tree-eg.py  tree.py
luamine/: INSTALL.md  README.md  acquire-eg.lua  acquire.lua  bayes-eg.lua  bayes.lua  bob-eg.lua  bob.lua  classify-eg.lua  classify.lua  cli-eg.lua  cli.lua  cluster-eg.lua  cluster.lua  cols-eg.lua  cols.lua  confuse-eg.lua  confuse.lua  cut-eg.lua  cut.lua  data-eg.lua  data.lua  de-eg.lua  de.lua  dist-eg.lua  dist.lua  ga-eg.lua  ga.lua  lapps.lua  lib.lua  list-eg.lua  list.lua  luamine-2.0.0-1.rockspec  luamine-eg.lua  luamine.lua  mutate-eg.lua  mutate.lua  num.lua  race-eg.lua  race.lua  (+16 more)
rulr/: README.md  index.md  pyproject.toml  rulr-eg.py  rulr-eg.py.md  rulr.py  rulr.py.md
sandbox/: abc-doc.md  abc-eg.lua  abc-eg.out  abc.lua  badges.html  ezr2-eg.py  ezr2.py  mine.lua  t.luam  t2.luam  todo.md
sas/: CLAUDE.md  (+11 more)
(+285 files in other folders)
