[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "branch"
version = "0.1.0"
readme = "README.md"
description = "Prune one regression tree into many small trees"
authors = [{name = "Tim Menzies", email = "timm@ieee.org"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
py-modules = ["branch"]

[project.urls]
Homepage = "https://github.com/timm/src"

[tool.ruff]
# terse K&R-style code; ignore the house-style rules
lint.ignore = ["E701","E702","E731","E401","E402",
               "F403","F405","F821"]
