[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rulr"
version = "0.1.0"
readme = "README.md"
description = "Greedy rule learner for multi-objective row selection"
authors = [{name = "Tim Menzies", email = "timm@ieee.org"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
py-modules = ["rulr"]

[project.urls]
Homepage = "https://github.com/timm/src"

[tool.ruff]
# terse K&R-style code; ignore the house-style rules
lint.ignore = ["E701","E702","E731","E401","E402",
               "F403","F405","F821"]
